fixes index.html "instagram-label" spacing issue

--- a/resources/css/colorbox.css
+++ b/resources/css/colorbox.css
@@ -313,8 +313,9 @@ hr{
 		margin-left: -26px;
 	}
 	.instagram-label{
-	    margin-left: -10px;
-    	margin-top: -43px;
+	    margin-left: -27px;
+    	
+	    margin-top: -30px;
 	}		
 	.footer-info{
 		margin-left: -90px;
